After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777362 - qtmux: Error always printed after writing moov recovery file, regardless of success/failure
qtmux: Error always printed after writing moov recovery file, regardless of s...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal minor
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-17 02:26 UTC by Brendan Shanks
Modified: 2017-01-27 15:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtmux: Fix debug typo and remove misleading warning (778 bytes, patch)
2017-01-25 18:43 UTC, Brendan Shanks
committed Details | Review

Description Brendan Shanks 2017-01-17 02:26:26 UTC
At the bottom of gst_qt_mux_prepare_moov_recovery() in gstqtmux.c, GST_WARNING_OBJECT (qtmux, "An error was detected while writing to recover file, moov recovery won't work") always runs and prints the warning whether there was an error or not.
Comment 1 Sebastian Dröge (slomo) 2017-01-17 11:00:15 UTC
Do you want to provide a patch?
Comment 2 Brendan Shanks 2017-01-25 18:43:59 UTC
Created attachment 344254 [details] [review]
qtmux: Fix debug typo and remove misleading warning

Fix a typo in qtmux debug message, and remove warning message that printed for both success and failure (every failure path already prints a more specific warning message)
Comment 3 Sebastian Dröge (slomo) 2017-01-26 13:06:50 UTC
Attachment 344254 [details] pushed as a9056a8 - qtmux: Fix debug typo and remove misleading warning