qtmux: Fix debug typo and remove misleading warning

https://bugzilla.gnome.org/show_bug.cgi?id=777362